# NAOsummer2018.8

worktree2018/.qi/: worktree.xml
worktree2018/NAO_SVM/: svmBlue-suc.xml
worktree2018/avoid3/: CMakeLists.txt  avoidcollision.cpp  qiproject.xml  svmPurple_bi.xml  svmRed_bi.xml  wxzSVM.cpp
worktree2018/avoid3/build-tool2/: CMakeCache.txt  Makefile  cmake_install.cmake
worktree2018/avoid3/build-tool2/sdk/share/qi/: path.conf
worktree2018/avoidobstacle/: avoidcollision.cpp  wxzSVM.cpp
worktree2018/backpack/: pictureRecgnize.cpp
worktree2018/backpack/avoidobstacle/: avoidcollision.cpp  wxzSVM.cpp  (+3 more)
worktree2018/baipingheng/: CMakeLists.txt  main.cpp  qiproject.xml
worktree2018/combine/: main.cpp
worktree2018/cutpicture/: CMakeLists.txt  main.cpp  qiproject.xml
worktree2018/drager/: CMakeLists.txt  dragcar.cpp  dragcar.h  main.cpp  qiproject.xml  svmOrange_bi.xml  wxzSVM.cpp
worktree2018/duibidu/: CMakeLists.txt  main.cpp  qiproject.xml
worktree2018/picture/: CMakeLists.txt  bp_param  main.cpp  qiproject.xml
worktree2018/picturerecgnize/: CMakeLists.txt  main.cpp  qiproject.xml
worktree2018/robotbaipingheng/: CMakeLists.txt  avoidcollision.cpp  avoidcollision.h  qiproject.xml
worktree2018/sebiao/: CMakeLists.txt  main.cpp  qiproject.xml
worktree2018/shijue/: CMakeLists.txt  bp_param  main.cpp  qiproject.xml
worktree2018/test1/: CMakeLists.txt  main.cpp  qiproject.xml  test.cpp
worktree2018/test2/: CMakeLists.txt  qiproject.xml
worktree2018/testsvm/: main.cpp
worktree2018/wxzSVMTraining/: a.out  main.cpp  svmPurple_bi.xml  svmRed_chu.xml
(+49 files in other folders)
